<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.easy.cooking.learneat.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:title="@string/sign_up_title_toolbar"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/margin_xlarge"
                android:text="@string/sign_up_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:id="@+id/iv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/iv_login_height"
                android:src="@drawable/plate_pure_food" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_sign_up_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tiet_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_huge"
                android:layout_marginLeft="@dimen/margin_huge"
                android:layout_marginRight="@dimen/margin_huge"
                android:layout_marginTop="@dimen/margin_default"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login_tv_register"
                android:textColor="@android:color/white"
                android:onClick="onClickToSignUp"/>

        </LinearLayout>
    </ScrollView>
    
    <ProgressBar
        android:id="@+id/sign_up_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

</LinearLayout>

