<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadPhotoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/upload_photo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_large">

        <ImageView
            android:id="@+id/iv_upload_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_large"
            android:scaleType="fitStart" />

        <TextView
            android:id="@+id/tv_upload_photo_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_margin="@dimen/margin_large"
            android:textSize="@dimen/font_size_large"
            android:text="@string/upload_photo_subtitle" />

        <Button
            android:id="@+id/btn_upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_upload_photo_subtitle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_large"
            android:layout_margin="@dimen/margin_default"
            android:background="@drawable/mybutton"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_medium"
            android:text="@string/upload_photo_button_label" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:backgroundTint="@android:color/white"
            app:fabSize="mini" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_huge"
            android:src="@drawable/ic_save"
            android:visibility="gone"
            android:padding="@dimen/padding_large"
            android:background="@drawable/mybutton"
            android:textColor="@android:color/white"
            android:text="@string/upload_photo_btn_save_photo" />

        <View
            android:id="@+id/upload_photo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#99FFFFFF" />

        <ProgressBar
            android:id="@+id/upload_photo_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>


</LinearLayout>