<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="@dimen/iv_profile_height"
                android:layout_height="@dimen/iv_profile_height"
                android:layout_marginTop="8dp"
                android:src="@drawable/avatar_female"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="roxana.pal"
                android:textSize="@dimen/font_size_headline"
                app:layout_constraintEnd_toEndOf="@+id/iv_profile_picture"
                app:layout_constraintStart_toStartOf="@+id/iv_profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture" />

            <TextView
                android:id="@+id/tv_profile_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_default"
                android:textSize="@dimen/font_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_profile_username"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_username"
                tools:text="100" />

            <TextView
                android:id="@+id/tv_profile_points_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_recipe_points_label"
                app:layout_constraintBottom_toBottomOf="@+id/tv_profile_points"
                app:layout_constraintEnd_toEndOf="@+id/tv_profile_username"
                app:layout_constraintStart_toEndOf="@+id/tv_profile_points"
                app:layout_constraintTop_toTopOf="@+id/tv_profile_points" />

            <TextView
                android:id="@+id/tv_profile_completed_recipes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_large"
                android:padding="@dimen/padding_default"
                android:text="@string/profile_gallery_photo_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_points" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_completed_recipes_label" />

            <ListView
                android:id="@+id/lv_profile_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/tv_profile_advice_list_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="@dimen/padding_default"
                android:text="@string/profile_advice_list_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lv_profile_gallery" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_advice_list_label" />

            <ListView
                android:id="@+id/lv_favorite_advice_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

</ScrollView>